<resources>
    <string name="app_name">ChallApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in_now">Log In Now</string>
    <string name="login_prompt">Please login and continue using the app</string>
    <string name="email_textfield">Email</string>
    <string name="password_logintext">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in_textbutton">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_loginpagetext">Sign Up</string>
    <string name="loginpageimage">loginpageImage</string>
    <string name="registerpageimage">registerpageImage</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="signup_prompt">Please fill the details and create the account</string>
    <string name="full_name">Full Name</string>
    <string name="you_agree_to_our">You agree to our</string>
    <string name="and">and</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="sign_up_registerpagebutton">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forgotpageimage">forgotpageimage</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="forgotbottomPrompt">Please enter your e-mail to recover password</string>
    <string name="recoverButtonText">Recover</string>
    <string name="verify_now">Verify Your Mail Now</string>
    <string name="verifynowpromtbottomtext">Verify your account and start your journey</string>
    <string name="verifypageimage">verifyPageImage</string>
    <string name="verifynowbottomPrompt">You can start using the application after</string>
    <string name="verifying_your_mail">verifying your mail.</string>
    <string name="wish_great_exp">We wish you will enjoy the experience</string>
    <string name="back_to_login">Back to Login</string>
    <string name="profilePageNamePromt">Name</string>
    <string name="profilePageMailPrompt">Mail</string>
    <string name="apply_changes_button">Apply Changes</string>
    <string name="account_information">Account Information</string>
    <string name="change_password_text">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="notification_image">Notification Image</string>
    <string name="days">Days</string>
    <string name="daily_challenge">Daily Challenge</string>
    <string name="daily_chall_history">Look to your daily challenge history</string>
    <string name="btn_see_your_daily_challenge">See your Daily Challenge</string>
    <string name="share_and_compete_with_your_friends">Share and compete with your friends.</string>
    <string name="complete_your_given_daily_challelenge">Complete your given daily challelenge</string>
    <string name="current_groups">Current Groups</string>
    <string name="create_your_group">Create Your Group</string>
    <string name="add_image">Add Image</string>
    <string name="profile">Profile</string>
    <string name="community">Community</string>
    <string name="home">Home</string>
    <string name="group_details">Group Details</string>
    <string name="group_owner">Group Owner</string>
    <string name="create_group">Create Group</string>
    <string name="group_name">Group Name</string>
    <string name="group_description">Group Description</string>
    <string name="invite_your_friends_and_share_your_challenges">Invite your friends and share your challenges</string>
    <string name="create_your_group_in_under_a_minute">Create your group in under a minute</string>
    <string name="back_navigation_arrow">Back Navigation Arrow</string>
    <string name="member">Member</string>
    <string name="owner">Owner</string>
    <string name="see_your_daily_challenge">See your Daily Challenge</string>
    <string name="fill_forms_error">"Please fill all of the forms."</string>
    <string name="email_Sent_succesful">"Email successfully sent to reset your password."</string>
    <string name="email_Sent_unsuccesful">"Reset mail could not be sent."</string>
    <string name="sign_out">Sign Out</string>
    <string name="challenge_date">Challenge Date</string>
    <string name="automatic_group_msg">This challenge will be automatically shared with your groups.</string>
    <string name="mark_challenge_as_complete">Mark Challenge as Complete</string>
    <string name="challange_description">Challenge Description</string>
    <string name="add_photo_image">Add Photo Image</string>
    <string name="login_failed">Login failed: Please check you credentials.</string>
    <string name="fill_namefield">Please fill the name form.</string>
    <string name="password_didnot_match">Password did not match.</string>
    <string name="check_current_password">Please check your current password.</string>
    <string name="check_password_length">Password length should be longer than 6 characters.</string>
    <string name="password_change_success">Password changed successfully</string>
    <string name="password_change_fail">Failed to change password</string>
    <string name="picture_or_description">You should fill description or upload a picture.</string>
    <string name="change_password">Change Password</string>
    <string name="start_premium">Start Premium</string>
    <string name="premium_adventages_prompt">Explore the advanteges of the premium and enhance your experience further.</string>
    <string name="completed_challenges">Completed Challenges</string>
    <string name="completed_challenge_prompt">Press to display all the challenges you completed so far.</string>
    <string name="all_challenges_you_completed">All challenges you completed</string>
    <string name="creation_date">Creation Date</string>
    <string name="ali_arda_girgin">Ali Arda Girgin</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_text">Ali Girgin built the Challenger Daily Challenge app as a Freemium app. This SERVICE is provided by Ali Girgin at no cost and is intended for use as is.

This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.

If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.

The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which are accessible at Challenger Daily Challenge unless otherwise defined in this Privacy Policy.</string>
    <string name="privacy_policy_information_use">For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way.

The app does use third-party services that may collect information used to identify you.

Link to the privacy policy of third-party service providers used by the app\n

\t* Google Play Services\n
\t* Google Analytics for Firebase</string>
    <string name="privacy_policy_log_data">I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third-party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.</string>
    <string name="privacy_policy_cookies">Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.

This Service does not use these “cookies” explicitly. However, the app may use third-party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.</string>
    <string name="privacy_policy_service_providers">I may employ third-party companies and individuals due to the following reasons:\n

\t* To facilitate our Service,\n
\t* To provide the Service on our behalf,\n
\t* To perform Service-related services, or\n
\t* To assist us in analyzing how our Service is used.\n
I want to inform users of this Service that these third parties have access to their Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</string>
    <string name="privacy_policy_security">I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.</string>
    <string name="privacy_policy_links">This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</string>
    <string name="privacy_policy_children">These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13 years of age. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do the necessary actions.</string>
    <string name="privacy_policy_changes">I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page.

This policy is effective as of 2023-08-25</string>
    <string name="privacy_policy_contactus">If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at challengerdailychallenge@gmail.com.

This privacy policy page was created at privacypolicytemplate.net and modified/generated by App Privacy Policy Generator</string>
    <string name="information_collection_and_use">Information Collection and Use</string>
    <string name="log_data">Log Data</string>
    <string name="cookies">Cookies</string>
    <string name="service_providers">Service Providers</string>
    <string name="security">Security</string>
    <string name="links_to_other_sites">Links to Other Sites</string>
    <string name="children_s_privacy">Children’s Privacy</string>
    <string name="changes_to_this_privacy_policy">Changes to This Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="challenger">Challenger</string>
    <string name="daily_challenge_application">Daily Challenge Application</string>
    <string name="challenger_image">Challenger Image</string>
</resources>