<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageview_verify"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/verifypageimage"
            android:src="@drawable/verfypic"
            app:layout_constraintBottom_toTopOf="@+id/textview_verifynow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/textview_verifynow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/intersemibold"
            android:text="@string/verify_now"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/textview_verifybottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageview_verify" />

        <TextView
            android:id="@+id/textview_verifybottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/interlight"
            android:text="@string/verifynowbottomPrompt"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/textview_verifybottom2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_verifynow" />

        <TextView
            android:id="@+id/textview_verifybottom2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/interlight"
            android:text="@string/verifying_your_mail"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/textview_verifybottom3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_verifybottom" />

        <TextView
            android:id="@+id/textview_verifybottom3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/interlight"
            android:text="@string/wish_great_exp"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/button_backtosignup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_verifybottom2" />

        <TextView
            android:id="@+id/button_backtosignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/interextrabold"
            android:text="@string/back_to_login"
            android:textColor="@color/primaryApplicationColor"
            android:textSize="24sp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textview_verifybottom3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/textview_verifybottom3"
            app:layout_constraintTop_toBottomOf="@+id/textview_verifybottom3" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>